# split-pr

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: pr-discovery.md  pr-splitter.md
commands/: split-pr.md
eval/: README.md  dashboard.html  evaluate.py  run_eval.sh  scores.jsonl  setup_benchmarks.sh
eval/fastapi/: README.md  ground_truth.json  setup.sh
eval/synthetic/: README.md  ground_truth.json  setup.sh
eval/synthetic/base/: pyproject.toml
eval/synthetic/base/api/: __init__.py  inventory.py  products.py
eval/synthetic/base/auth/: __init__.py  permissions.py  tokens.py
eval/synthetic/base/database/: __init__.py  connection.py  queries.py
eval/synthetic/base/models/: __init__.py  inventory.py  product.py  warehouse.py
eval/synthetic/base/tests/: test_auth.py  test_inventory.py  test_products.py  test_utils.py  test_warehouse.py
eval/synthetic/base/utils/: __init__.py  formatting.py  validation.py
hooks/: hooks.json
src/split_pr/: analyzer.py  cli.py  dag.py  diff_parser.py  state.py
tests/: test_analyzer.py  test_cli.py  test_dag.py  test_diff_parser.py  test_state.py
